Added radiius filteroption
